kubernetes/gold-digger-cron-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: gold-digger-cron-deployment
    labels:
        app: gold-digger-cron
spec:
    replicas: 1
    selector:
        matchLabels:
            app: gold-digger-cron
    template:
        metadata:
            labels:
                app: gold-digger-cron
        spec:
            containers:
                -   name: golddigger-cron-master
                    image: eu.gcr.io/roihunter-master/roihunter/golddigger:$BUILD_NUMBER
                    imagePullPolicy: Always
                    readinessProbe:
                        exec:
                            command:
                                - echo
                                - "OK!"
                        initialDelaySeconds: 5
                        periodSeconds: 30
                    command: [ "python" ]
                    args: [ "-m", "gold_digger", "cron" ]
                    ports:
                        -   containerPort: 8080
                    resources:
                        limits:
                            memory: "0.5G"
                            cpu: "0.25"
                        requests:
                            memory: "0.25G"
                            cpu: "0.1"
